force-app/main/default/objects/Container__c/fields/Container_ID__c.field-meta.xml
<CustomField>
    <fullName>Container_ID__c</fullName>
    <displayFormat>HLAG-{00000}</displayFormat>
    <externalId>true</externalId>
    <label>Container ID</label>
    <type>AutoNumber</type>
</CustomField>