force-app/main/default/objects/Container__c/fields/Container_owner__c.field-meta.xml
<CustomField>
    <fullName>Container_owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Container owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Containers</relationshipLabel>
    <relationshipName>Containers</relationshipName>
    <type>Lookup</type>
</CustomField>