force-app/main/default/objects/Container__c/fields/Container_type__c.field-meta.xml
<CustomField>
    <fullName>Container_type__c</fullName>
    <label>Container type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Refrigerator Container</fullName>
            </value>
            <value>
                <fullName>Dry Storage Container</fullName>
            </value>
            <value>
                <fullName>Special Purpose Container</fullName>
            </value>
            <value>
                <fullName>General Type Container</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>