force-app/main/default/objects/Container__c/fields/Schedule_booking__c.field-meta.xml
<CustomField>
    <fullName>Schedule_booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schedule booking</label>
    <referenceTo>Schedule_booking__c</referenceTo>
    <relationshipLabel>Containers</relationshipLabel>
    <relationshipName>Containers</relationshipName>
    <type>Lookup</type>
</CustomField>