force-app/main/default/objects/Container__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 TEU</fullName>
            </value>
            <value>
                <fullName>2 TEU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>