force-app/main/default/objects/Container__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On the way for pick-up</fullName>
            </value>
            <value>
                <fullName>Arrived at terminal and pending for customs clearance</fullName>
            </value>
            <value>
                <fullName>Loaded onto vessel at port of origin</fullName>
            </value>
            <value>
                <fullName>Vessel departed</fullName>
            </value>
            <value>
                <fullName>Vessel arrived at port of destination</fullName>
            </value>
            <value>
                <fullName>Delivered at customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>